test/functions/ferguson/query/unmanaged-borrow-mismatch1.chpl
class GenericClass {
  type t;
  var v: int;
}

record Wrapper {
  var f;
}

proc g(x: Wrapper(borrowed GenericClass)) {
  writeln(x, " : ", x.type:string);
}

var c = new Wrapper(new unmanaged GenericClass(int, 3));

g(c); // error - type mismatch
